--- a/app/src/main/res/layout/activity_group_main.xml
+++ b/app/src/main/res/layout/activity_group_main.xml
@@ -40,33 +40,29 @@
         android:orientation="vertical"
         android:paddingTop="?attr/actionBarSize">
 
-        <android.support.constraint.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="67dp"
-            android:gravity="center">
+            android:layout_height="169dp"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textView_groupName"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="群組名稱"
-                android:textSize="18sp"
-                android:textColor="#303F9F"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="22dp"
-                android:layout_marginLeft="166dp"
-                app:layout_constraintLeft_toLeftOf="parent" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="164dp"
 
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                app:srcCompat="@drawable/group_blue"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="18dp"
-                android:layout_marginLeft="126dp"
-                app:layout_constraintLeft_toLeftOf="parent" />
-        </android.support.constraint.ConstraintLayout>
+                >
+
+                <ImageView
+                    android:id="@+id/pic_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    app:srcCompat="@drawable/group_pic1" />
+
+
+            </RelativeLayout>
+
+        </LinearLayout>
 
         <include
             layout="@layout/content_main"
