--- a/app/src/main/res/layout/activity_new_group.xml
+++ b/app/src/main/res/layout/activity_new_group.xml
@@ -17,7 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/white"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:theme="@style/ToolbarColoredBackArrow">
 
             <TextView
                 android:layout_width="wrap_content"
